# structural-heart-disease

./: .gitignore  Makefile  README.md  SHD_Colab_Training.ipynb  environment.yml  evaluate.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_conda.sh  train.py  visualize_ecg.py
configs/: default_config.json
src/: __init__.py  dataset.py  models.py  utils.py
